--- a/client/assets/less/index.less
+++ b/client/assets/less/index.less
@@ -1,14 +1,16 @@
-html,body {
+html, body {
   background-color: #f4f5f5;
 }
-
 ul {
   padding: 0;
 }
 ul li {
   list-style-type: none;
 }
-
 .ant-message {
   z-index: 2099;
+}
+#nprogress .bar {
+  // height: 2px !important;
+  // background: #49ef49 !important; //自定义颜色
 }
